--- a/config.json
+++ b/config.json
@@ -17,16 +17,16 @@
         "main_ads": "fan",
         "backup_ads": "admob",
         "admob_banner_id": "0",
-        "admob_interstitial_id": "0",
+        "admob_interstitial_id": "ca-app-pub-8582541165342844/2623946641",
         "admob_native_id": "0",
         "admob_app_open_id": "0",
         "ad_manager_banner_id": "0",
         "ad_manager_interstitial_id": "0",
         "ad_manager_native_id": "0",
         "ad_manager_app_open_id": "0",
-        "fan_banner_id": "0",
-        "fan_interstitial_id": "0",
-        "fan_native_id": "0",
+        "fan_banner_id": "803482258261875_803483258261775",
+        "fan_interstitial_id": "803482258261875_803483594928408",
+        "fan_native_id": "803482258261875_803483931595041",
         "startapp_app_id": "0",
         "unity_game_id": "0",
         "unity_banner_id": "banner",
